crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_nowdoc_strips_indentation_but_applies_no_escapes.snap
---
source: crates/nvs-ir/src/lower.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object) -> void {
  bb0:
    safepoint
    v0 = param 0  ; object
    ; stmt s0 @4:5-6:13
    v1 = const.str "raw \\n text"  ; string
    release v1
    release v0
    return
}
