crates/nvs-ir/src/lower/snapshots/nvs_ir__lower__tests__a_nullsafe_method_call_on_a_nullable_receiver.snap
---
source: crates/mwl-ir/src/lower/mod.rs
expression: "print_function(&f, map.file(file))"
---
fn m(object, tagged) -> tagged {
  bb0:
    safepoint
    v0 = param 0  ; object
    v1 = param 1  ; tagged
    ; stmt s0 @9:5-9:27
    v2 = is.null v1  ; bool
    branch v2 -> bb1 (e0), bb2 (e1)
  bb1:
    v6 = const.null  ; null
    v7 = tag v6  ; tagged
    jump bb3
  bb2:
    v3 = untag v1  ; object
    retain v3
    v4 = call Foo::greet(this: v3) ! bb4  ; int
    v5 = tag v4  ; tagged
    jump bb3
  bb3:
    v8 = phi [bb2: v5, bb1: v7]  ; tagged
    release v1
    release v0
    return v8
  bb4:
    release v1
    release v0
    propagate "m() at t.mwl:9"
}
